Added Photos page header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,4 +88,8 @@ footer {
 .music-hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-music.jpg);
 }
+.photos-hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-photos.png);
+}
+
 /*  Hero images and text end*/
