Added About page header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ footer {
 .tour-hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-tour.jpeg);
 }
-
-
-
+.about-hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-about.jpg);
+}
 /*  Hero images and text end*/
