--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,18 @@
 /* website rules start */
 
 .general-content{
-font-family: 'Open Sans', sans-serif;
-font-size: 16px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
 }
 
 .subtitle-1{
-font-family: 'Roboto', sans-serif;
-text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
 }
 
 .subtitle-2{
-font-family: 'Roboto', sans-serif;
-text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
 }
 
 .silver-sand-bg{
@@ -25,6 +25,14 @@ text-transform: uppercase;
     background-color: #969C9B;
     padding: 3rem 2.5rem;
 }
+
+.info-button{
+    background-color: #505353;
+}
+.info-button:hover{
+    color:#A3320B
+}
+
 /* website rules end */
 
 /* NavBar Start */
@@ -42,7 +50,7 @@ text-transform: uppercase;
     font-size:20px;
 }
 .navbar-toggler{
-background-color:#A3320B;
+    background-color:#A3320B;
 }
 .nav-link:hover{
     color:#A3320B
@@ -133,36 +141,31 @@ background-color:#A3320B;
 /* index page start */
 
 .welcome{
-  text-align: center;
-}
-
-
-.info-button{
- background-color: #505353;
+    text-align: center;
 }
 
 .studio-index{
-height:auto;
-width: 30vw;
-padding-bottom: 10px;
+    height:auto;
+    width: 30vw;
+ 
 
 }
 
 @media only screen and (max-width: 767.98px){
 .studio-index{
-width: 280px;
-height: auto;
+    width: 280px;
+    height: auto;
     }
 }
 
 .heart-5-index{
-  text-align: center;
+    text-align: center;
 }
 
 .heart-5-index-img{
-height:auto;
-width:30vw ;
-padding-bottom: 1vh;
+    height:auto;
+    width:30vw ;
+    padding-bottom: 1vh;
 }
 
 
@@ -174,13 +177,44 @@ padding-bottom: 1vh;
 }
 @media only screen and (max-width: 767.98px){
 .index-video{
-width: 280px;
-height: auto;
+    width: 280px;
+    height: auto;
     }
 }
 
 
 /* index page end */
+
+/* music page start */
+.album-covers{
+    height:auto;
+    width:30vw ;
+    padding-bottom: 1vh;
+}
+@media only screen and (max-width: 767.98px){
+.album-covers{
+    width: 280px;
+    height: auto;
+    }
+}
+.tracklist li{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    padding-bottom: 1vh;
+    list-style: none;
+
+}
+
+.tracklist-p1 li{
+    padding-left: 50%;
+
+}
+
+.album-title{
+    text-align: center;
+    padding-bottom: 1vh;
+}
+/* music page end */
 
 /* Footer Start */
 
@@ -198,6 +232,7 @@ footer {
     width: 30px;
     text-decoration: none;
 }
+
 .fab:hover{
     color:#A3320B;
 }
