--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,13 +217,16 @@
 /* music page end */
 
 /* photo page start */
-
+.video-container
+.photo-container{
+text-align: center;
+}
 .photo-gallery{
-    width:20vw;
+    width:22vw;
     height: auto;
     padding: 10px;
 }
-@media only screen and (max-width: 767.98px){
+@media only screen and (max-width: 992px){
 .photo-gallery{
     width: 280px;
     height: auto;
@@ -231,6 +234,28 @@
 }
 
 /* photo page end */
+
+/* video page Start */
+.video-container{
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden; 
+}
+.music-videos{
+ position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10px;
+}
+
+
+
+/* video page end */
+
 
 
 /* Footer Start */
