Added content and css styling to contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,8 +274,12 @@ text-align: center;
 }
 
 /* about page start */
+.rep-label{
+    padding-bottom: 100px;
+}
 
 
+/* about page end */
 
 /* Footer Start */
 
