--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,17 +153,11 @@
 
 @media only screen and (max-width: 992px){
 .studio-index{
-    width: 280px;
+    width: 240px;
     height: auto;
     }
 }
 
-@media only screen and (max-width: 360px){
-.studio-index{
-    width: 200px;
-    height: auto;
-    }
-}
 
 .center-img{
     text-align: center;
@@ -175,14 +169,9 @@
     padding-bottom: 10px;
 }
 
-.index-video {
-    height: 25vw;
-    width: 40vw;
-}
-
 @media only screen and (max-width: 767.98px){
-.index-video{
-    width: 280px;
+.heart-5-index-img{
+    width: 240px;
     height: auto;
     }
 }
