--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,12 @@ text-align: center;
     height: auto;
     }
 }
+@media only screen and (max-width: 350px){
+.photo-gallery{
+    width: 240px;
+    height: auto;
+    }
+}
 
 /* photo page end */
 
