--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,6 +300,7 @@ text-align: center;
     padding-bottom: 100px;
 }
 
+
 /* about page end */
 
 /* tour page start */
@@ -344,6 +345,31 @@ text-align: center;
 /* Credit ID= 3 End */
 
 /* tour page end */
+
+/* contact us page start */
+/* Credit ID=4 Start */
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #A3320B; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  background-color:#B0B8B8;
+}
+form label {
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+}
+/* When moving the mouse over the submit button, add a darker green color */
+
+/* Credit ID=5 End */
+/* contact us page end */
+
 
 /* Footer Start */
 
