murged subtitle classes into one class rule set as they were both identicle rule sets. updated pages to new class names

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,11 @@
     font-size: 16px;
 }
 
-.subtitle-1{
+.subtitle{
     font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
     margin-bottom: 0;
 }
-
-.subtitle-2{
-    font-family: 'Roboto', sans-serif;
-    text-transform: uppercase;
-}
-
 
 .silver-sand-bg{
     background-color: #B0B8B8;
