added class for padding directed at social/streaming links on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,10 @@ text-align: center;
 /* tour page end */
 
 /* contact us page start */
+
+.sl-contact{
+padding-right: 1.5em;
+}
 /* Credit ID=4 Start */
 
 /* Style inputs with type="text", select elements and textareas */
