--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,8 +301,8 @@ text-align: center;
 }
 
 /* about page start */
-.rep-label{
-    padding-bottom: 100px;
+.contact-titles{
+    padding-bottom: 60px;
 }
 
 
