Changed hover colour of Nav-logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@
 .navbar-dark .navbar-nav .nav-link:hover{
     color:#A3320B;
 }
+.navbar-dark .navbar-brand:focus, .navbar-dark .navbar-brand:hover {
+    color: #969C9B;
+}
 
 .navbar-dark .navbar-brand {
     text-transform: uppercase;
